[package]
name = "webrtc-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-files = "0.6.4"
actix-web = "4.4.1"
actix-web-actors = "4.2.0"
actix_derive = "0.6.1"
async-lock = "3.2.0"
clap = { version = "4.4.12", features = ["derive"] }
event-listener-primitives = "2.0.1"
futures-lite = "2.1.0"
log = "0.4.20"
log4rs = "1.2.0"
mediasoup = "0.14.0"
parking_lot = "0.12.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
serde_yaml = "0.9.29"
tokio = { version = "1.35.1", features = ["full"] }
tokio-fs = "0.1.7"
uuid = "1.6.1"
